gitops/monitoring/alloy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy-ui
  namespace: monitoring
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:075472844803:certificate/aaba3efe-95bb-4629-8f4c-55bcecd9ee81
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: alloy.lab.trdevops.com.br
spec:
  ingressClassName: alb
  rules:
    - host: alloy.lab.trdevops.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy
                port:
                  number: 12345
  tls:
    - secretName: alloy-tls
      hosts:
        - alloy.lab.trdevops.com.br
